--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nuget-publish",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Publish npm packages to NuGet using package.json",
   "main": "index.js",
   "repository": "https://github.com/FezVrasta/nuget-publish",
@@ -10,11 +10,10 @@
     "nuget-publish": "index.js"
   },
   "dependencies": {
-    "gitignore-to-glob": "^0.3.0",
-    "glob-fs": "^0.1.6",
-    "micromatch": "^3.0.3",
+    "glob-fs": "^0.1.7",
+    "micromatch": "^3.0.4",
+    "npm-packlist": "^1.1.6",
     "nuget-in-path": "^2.0.1",
-    "object.omit": "^2.0.1",
     "xml": "^1.0.1"
   }
 }
